# emr

./: CLAUDE.md  COMPLIANCE.md  DECISIONS.md  FHIR.md  FLOW.md  MODULES.md  README.md  SKILLS.md  STACK.md  UX.md
oscar-next/ai/: Dockerfile  pyproject.toml
oscar-next/ai/app/: config.py  main.py
oscar-next/ai/app/routers/: billing.py  cds.py  encounter.py  summarize.py
oscar-next/ai/app/services/: anthropic_client.py  deidentify.py  ollama_client.py
oscar-next/ai/tests/: test_ai_scaffold.py  test_deidentify.py
oscar-next/backend/: .env  .env.example  Dockerfile  pyproject.toml
oscar-next/backend/app/: config.py  database.py  main.py
oscar-next/backend/app/middleware/: audit.py  auth.py  db_session.py  rbac.py
oscar-next/backend/app/models/: demographic.py
oscar-next/backend/app/routers/: admin_config.py  demographic.py  health.py
oscar-next/backend/app/schemas/: demographic.py
oscar-next/backend/app/services/: demographic_service.py
oscar-next/backend/tests/: test_auth_middleware.py  test_database.py  test_db_session_middleware.py  test_demographic_audit.py  test_demographic_model.py  test_demographic_router.py  test_keycloak.py  test_patient_merge.py  test_rbac.py  test_scaffold.py
oscar-next/docker/: .env  .env.example  CLOUDFLARE_TUNNEL.md  docker-compose.yml  smoke-test.sh
oscar-next/docker/keycloak/: realm-export.json
oscar-next/frontend/: .env.local.example  Dockerfile  package-lock.json  package.json
oscar-next/frontend/app/: layout.tsx  page.tsx  providers.tsx
oscar-next/frontend/app/(auth)/login/: LoginButton.tsx  page.tsx
oscar-next/frontend/app/(clinical)/: layout.tsx
oscar-next/frontend/components/clinical/: CommandPalette.tsx  PatientNav.tsx  Sidebar.tsx  TopBar.tsx
oscar-next/frontend/lib/: api.ts  auth.ts  authOptions.ts  patientCache.ts  utils.ts
oscar-next/frontend/lib/api/: patients.server.ts  patients.ts
oscar-next/frontend/lib/types/: patient.ts
oscar-next/frontend/types/: next-auth.d.ts
progress/: phase0-1-scaffold.md  phase0-2-database.md  phase0-3-db-session.md
(+19 files in other folders)
