[project]
name = "oscar-next-api"
version = "0.1.0"
description = "Oscar-Next FHIR R4 backend — Python FastAPI"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    # Database
    "sqlalchemy==2.0.30",
    "aiomysql==0.2.0",
    # FHIR R4
    "fhir.resources==7.1.0",
    # Auth / JWT
    "python-jose[cryptography]==3.3.0",
    "python-keycloak==3.12.0",
    # Pin cryptography below 42 — Rust-compiled 42+ causes SIGILL in Docker Desktop arm64
    "cryptography>=3.4.0,<42.0.0",
    # Config
    "pydantic-settings==2.3.0",
    # HTTP client
    "httpx==0.27.0",
    # Scheduled jobs
    "apscheduler==3.10.4",
    # HL7 v2 parsing
    "hl7apy==1.3.4",
    # Utilities
    "python-multipart==0.0.9",
    "python-dotenv==1.0.1",
    "greenlet>=3.5.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
    "httpx==0.27.0",
    "ruff==0.4.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "ruff>=0.4.7",
]
